Fix line break in home page heading

--- a/style.css
+++ b/style.css
@@ -227,4 +227,8 @@ main {
         letter-spacing: 0px;
         line-height: 50px;
     }
+
+    #home .home-row h1 br {
+        display: none;
+    }
 }
